--- a/templates/orders/order_details.html
+++ b/templates/orders/order_details.html
@@ -16,7 +16,7 @@
                         <li class="list-inline-item"><a href="{% url 'customers:wishlist' %}">My wishlist</a></li>
                         <li class="list-inline-item"><a href="{% url 'cart:cart_items' %}">My cart</a></li>
                         <li class="list-inline-item"><a href="#" class="active">Order</a></li>
-                        <li class="list-inline-item"><a href="{% url 'customers:logoutUser' %}" class="mr-0">Log-out</a></li>
+                        <li class="list-inline-item"><a href="{% url 'customers:logout' %}" class="mr-0">Log-out</a></li>
                     </ul>
                 </div>
                 <!-- Dashboard-Nav  End-->
