--- a/templates/user/user_email_verification.html
+++ b/templates/user/user_email_verification.html
@@ -2,9 +2,10 @@
 {% block title %}Account Email Verfication{% endblock %}
 {% block content %}
 <div class="container">
-    <div>
+    <div class="row">
         <h3 class="mb-4">Account email sent</h3>
         <p>Check your email to activate your account</p>
     </div>
+ 
 </div>
 {% endblock %}
