--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,4 +1,6 @@
+
 {% load static %}
+{% load mptt_tags %}
 <!-- Header Area Start -->
 <header class="header">
     <div class="header-top">
@@ -68,13 +70,37 @@
                                     </g>
                                 </svg>
                             </a>
-                            <ul class="sub-menu">
-                                <li><a href="javascript:void(0)">Category 1</a></li>
-                                <li><a href="javascript:void(0)">Category 2</a></li>
-                                <li><a href="javascript:void(0)">Category 3</a></li>
-                                <li><a href="javascript:void(0)">Category 4</a></li>
-                                <li><a href="javascript:void(0)">Category 5</a></li>
-                            </ul>
+
+                            {% comment %} <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li class="dropdown dropend">
+                                    <a class="dropdown-item dropdown-toggle" href="#" id="multilevelDropdownMenu1" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Multilevel Action 1</a>
+                                    <ul class="dropdown-menu" aria-labelledby="multilevelDropdownMenu1">
+                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li class="dropdown dropend">
+                                            <a class="dropdown-item dropdown-toggle" href="#" id="multilevelDropdownMenu1" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Multilevel Action 2</a>
+                                            <ul class="dropdown-menu" aria-labelledby="multilevelDropdownMenu2">
+                                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                            </ul>
+                                        </li>
+                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    </ul>
+                                </li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul> {% endcomment %}
+                            {% comment %} <div class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+                                  Dropdown
+                                </button>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                                  <li><button class="dropdown-item" type="button">Action</button></li>
+                                  <li><button class="dropdown-item" type="button">Another action</button></li>
+                                  <li><button class="dropdown-item" type="button">Something else here</button></li>
+                                </ul>
+                            </div> {% endcomment %}
                         </li>
                     </ul>
                     <form method='get' action="{% url 'shop:shop_home' %}">
@@ -94,7 +120,6 @@
                                         </g>
                                     </svg>
                                 </div>
-                            
                             {% endif %}
                         </div>
                     </form>
@@ -144,7 +169,9 @@
                                 </a>
                             </li>
                             <li class="mx-3">
-                                <a href="#">{% if request.user %} {{ request.user.full_name }} {% endif %} <svg xmlns="http://www.w3.org/2000/svg" width="18"
+                                {% if request.user.is_authenticated and reqeust.user.role == CUSTOMER %}
+                                <div class="dropdown-center">
+                                    <a  class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" > {{ request.user.full_name }} <svg xmlns="http://www.w3.org/2000/svg" width="18"
                                         height="20" viewBox="0 0 18 20">
                                         <g id="Account" transform="translate(1 1)">
                                             <path id="Path_86" data-name="Path 86"
@@ -156,6 +183,26 @@
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
                                         </g>
                                     </svg></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#">Settings</a></li>
+                                        <li><a class="dropdown-item" href="#">Dashboard</a></li>
+                                        <li><a class="dropdown-item"  data-bs-toggle="modal" data-bs-target="#logoutModal">Logout</a></li>
+                                    </ul>
+                                </div>
+                                {% else %} 
+                                <a href="{% url 'customers:loginUser' %}" ><svg xmlns="http://www.w3.org/2000/svg" width="18"
+                                    height="20" viewBox="0 0 18 20">
+                                    <g id="Account" transform="translate(1 1)">
+                                        <path id="Path_86" data-name="Path 86"
+                                            d="M20,21V19a4,4,0,0,0-4-4H8a4,4,0,0,0-4,4v2"
+                                            transform="translate(-4 -3)" fill="none" stroke="#000"
+                                            stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
+                                        <circle id="Ellipse_9" data-name="Ellipse 9" cx="4" cy="4" r="4"
+                                            transform="translate(4)" fill="#fff" stroke="#000"
+                                            stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
+                                    </g>
+                                </svg></a>
+                                {% endif %}
                             </li>
                         </ul>
                     </div>
@@ -302,3 +349,22 @@
     </div>
 </header>
 <!-- Header Area End -->
+
+<!-- Modal -->
+<div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h6 class="modal-title" id="logoutModalLabel">Are you Sure?</h6>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        
+        <div class="modal-footer">
+          <a class="btn btn-danger" href="{% url 'customers:logout' %}">Logout</a>
+        </div>
+      </div>
+    </div>
+</div>
+
+  
+
