--- a/templates/shops/add_products.html
+++ b/templates/shops/add_products.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="section-title">
-                    <h2>Add New Products</h2>
+                    <h2>Add Product</h2>
                 </div>
             </div>
         </div>
