--- a/templates/shops/all_products.html
+++ b/templates/shops/all_products.html
@@ -43,6 +43,8 @@
 <!-- Catagory item End -->
 </form>
 
+
+
 <!-- Populer Product Strat -->
 <section class="populerproduct bg-white p-0 shop-product">
     <div class="container">
@@ -81,7 +83,7 @@
                     </div>
                     <div class="product-item-info">
                         <a href="{{ product.get_absolute_url }}">{{ product.title|truncatechars:20 }}</a>
-                        <span>Rs {{ product.price }}</span> <del>Rs 999</del>
+                        <span>Rs {{ product.price }}</span> <del>{{ product.mrp_price }}</del>
                     </div>
                 </div>
             </div>
